# hash-backend-finance-challenge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  apiv1.cpp  apiv1.h  hash-backend-finance-challenge.cpp  hash-backend-finance-challenge.h
tests/: CMakeLists.txt  hf.cpp
